--- a/app/src/main/res/layout/activity_list_online.xml
+++ b/app/src/main/res/layout/activity_list_online.xml
@@ -4,6 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="net.nqlab.simple.LoginActivity">
+    tools:context="net.nqlab.simple.ListOnlineActivity">
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
