--- a/app/src/main/res/layout/list_item_list_online.xml
+++ b/app/src/main/res/layout/list_item_list_online.xml
@@ -17,7 +17,7 @@
             android:id="@+id/name"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/abc_text_size_display_1_material"
             android:layout_marginTop="10dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
@@ -28,9 +28,21 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0km"
             android:id="@+id/distance"
-            android:textSize="@dimen/abc_text_size_display_1_material"
-            android:layout_toEndOf="@+id/name"
+            android:textSize="@dimen/abc_text_size_body_1_material"
+            android:layout_toStartOf="@+id/elevation"
+            android:layout_marginEnd="10dp"
             android:layout_alignBaseline="@+id/name" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0m"
+            android:id="@+id/elevation"
+            android:textSize="@dimen/abc_text_size_body_1_material"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:layout_alignBaseline="@+id/distance" />
     </RelativeLayout>
 
 </RelativeLayout>
