--- a/app/src/main/res/layout/activity_show_online.xml
+++ b/app/src/main/res/layout/activity_show_online.xml
@@ -4,6 +4,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="net.nqlab.simple.controller.LoginActivity">
+    tools:context="net.nqlab.simple.controller.ShowOnlineActivity">
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/download"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
