--- a/app/src/main/res/layout/activity_show_downloaded.xml
+++ b/app/src/main/res/layout/activity_show_downloaded.xml
@@ -26,12 +26,12 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin">
-            <ListView
+            <ExpandableListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/listView"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:id="@+id/expandableListView"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
         </RelativeLayout>
     </LinearLayout>
     <!-- The navigation drawer -->
