--- a/app/src/main/res/layout/list_item_show_downloaded_route.xml
+++ b/app/src/main/res/layout/list_item_show_downloaded_route.xml
@@ -10,12 +10,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="name"
         android:id="@+id/name"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="12dp"
         android:textSize="@dimen/abc_text_size_display_1_material"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignTop="@+id/imageView"
+        android:layout_toEndOf="@+id/imageView"
+        android:layout_marginTop="-8dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,7 +24,7 @@
         android:id="@+id/distance"
         android:textSize="@dimen/abc_text_size_body_1_material"
         android:layout_toStartOf="@+id/elevation"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="12dp"
         android:layout_alignBaseline="@+id/name" />
 
     <TextView
@@ -38,5 +37,14 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10dp"
         android:layout_alignBaseline="@+id/distance" />
+
+    <ImageView
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="12dp" />
 
 </RelativeLayout>
