--- a/app/src/main/res/layout/list_item_go_pass.xml
+++ b/app/src/main/res/layout/list_item_go_pass.xml
@@ -4,39 +4,99 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <GridLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="name"
-        android:id="@+id/name"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:textSize="@dimen/abc_text_size_display_1_material"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/gridLayout"
+        android:layout_alignEnd="@+id/gridLayout"
+        android:layout_alignLeft="@+id/gridLayout"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:columnCount="4"
+        android:rowCount="2"
+        >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="0km"
-        android:id="@+id/distance"
-        android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_toStartOf="@+id/elevation"
-        android:layout_marginEnd="10dp"
-        android:layout_alignBaseline="@+id/name" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center_vertical|left" 
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="name"
+            android:id="@+id/name"
+            android:textSize="@dimen/abc_text_size_display_1_material"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="0m"
-        android:id="@+id/elevation"
-        android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="10dp"
-        android:layout_alignBaseline="@+id/distance" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center_vertical|left" 
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="comment"
+            android:id="@+id/comment"
+            android:textSize="@dimen/abc_text_size_display_1_material" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center_vertical|left" 
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="15km/h"
+            android:id="@+id/target_speed"
+            android:textSize="@dimen/abc_text_size_body_1_material" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center_vertical|left" 
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="15km/h"
+            android:id="@+id/limit_speed"
+            android:textSize="@dimen/abc_text_size_body_1_material" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center_vertical|left" 
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0km"
+            android:id="@+id/distance_addition"
+            android:textSize="@dimen/abc_text_size_body_1_material" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center_vertical|left" 
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0m"
+            android:id="@+id/elevation"
+            android:textSize="@dimen/abc_text_size_body_1_material" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center_vertical|left" 
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="+00:00"
+            android:id="@+id/target_time_addition"
+            android:textSize="@dimen/abc_text_size_body_1_material" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center_vertical|left" 
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="+00:00"
+            android:id="@+id/limit_time_addition"
+            android:textSize="@dimen/abc_text_size_body_1_material" />
+
+    </GridLayout>
 
 </RelativeLayout>
