--- a/app/src/main/res/layout/activity_go.xml
+++ b/app/src/main/res/layout/activity_go.xml
@@ -4,11 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="net.nqlab.simple.controller.ListOnlineActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
