--- a/app/src/main/res/layout/list_item_go_junction.xml
+++ b/app/src/main/res/layout/list_item_go_junction.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:columnCount="3"
+        android:columnCount="4"
         android:rowCount="3"
         android:id="@+id/gridLayout">
 
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_gravity="bottom|right" 
-            android:text="New Text"
+            android:text="R256"
             android:id="@+id/text_view_nw"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_headline_material" />
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_gravity="bottom|center_horizontal"
-            android:text="New Text"
+            android:text="R256"
             android:id="@+id/text_view_n"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_headline_material" />
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_gravity="bottom|left"
-            android:text="New Text"
+            android:text="R256"
             android:id="@+id/text_view_ne"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_headline_material" />
@@ -46,9 +46,19 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_columnWeight="0.5"
+            android:layout_gravity="fill_horizontal|left|center_vertical"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="name"
+            android:id="@+id/name"
+            android:textSize="@dimen/abc_text_size_display_1_material"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_gravity="center_vertical|right"
-            android:text="New Text"
+            android:text="R256"
             android:id="@+id/text_view_w"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_headline_material" />
@@ -66,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_gravity="center_vertical|left"
-            android:text="New Text"
+            android:text="R256"
             android:id="@+id/text_view_e"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_headline_material" />
@@ -74,9 +84,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_columnWeight="0.5"
+            android:layout_gravity="left"
+            android:layout_rowSpan="2"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="comment"
+            android:id="@+id/comment"
+            android:textSize="@dimen/abc_text_size_headline_material" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_gravity="top|right"
-            android:text="New Text"
+            android:text="R256"
             android:id="@+id/text_view_sw"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_headline_material" />
@@ -86,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_gravity="top|center_horizontal"
-            android:text="New Text"
+            android:text="R256"
             android:id="@+id/text_view_s"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_headline_material" />
@@ -96,7 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_gravity="top|left"
-            android:text="New Text"
+            android:text="R256"
             android:id="@+id/text_view_se"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_headline_material" />
@@ -121,26 +142,6 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="0.5"
             android:layout_gravity="fill_horizontal|left|center_vertical"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="name"
-            android:id="@+id/name"
-            android:textSize="@dimen/abc_text_size_display_1_material"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="0.5"
-            android:layout_gravity="center_vertical|left"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="comment"
-            android:id="@+id/comment"
-            android:textSize="@dimen/abc_text_size_display_1_material" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="0.5"
-            android:layout_gravity="center_vertical|left"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0km"
             android:id="@+id/distance_addition"
