--- a/app/src/main/res/layout/activity_list_online.xml
+++ b/app/src/main/res/layout/activity_list_online.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:title="@string/title_activity_list_online" />
         <RelativeLayout
             android:layout_width="match_parent"
