レイアウト崩れを修正

--- a/app/src/main/res/layout/list_item_go_junction.xml
+++ b/app/src/main/res/layout/list_item_go_junction.xml
@@ -133,7 +133,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="name"
             android:id="@+id/name"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
 
         <TextView
@@ -145,7 +145,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="comment"
             android:id="@+id/comment"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
 
         <TextView
@@ -156,7 +156,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0km"
             android:id="@+id/distance_addition"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
 
         <TextView
@@ -167,7 +167,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0m"
             android:id="@+id/elevation"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
 
         <TextView
@@ -178,7 +178,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="15km/h"
             android:id="@+id/target_speed"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
 
         <TextView
@@ -189,7 +189,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="15km/h"
             android:id="@+id/limit_speed"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
 
         <TextView
@@ -200,7 +200,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="+00:00"
             android:id="@+id/target_time_addition"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
 
         <TextView
@@ -211,7 +211,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="+00:00"
             android:id="@+id/limit_time_addition"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
 
         <TextView
@@ -222,7 +222,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="15km"
             android:id="@+id/pc_total_distance"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
 
         <TextView
@@ -233,7 +233,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="00:00"
             android:id="@+id/total_limit_time"
-            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textSize="@dimen/go_text_size"
             android:textColor="@color/colorTextPrimary" />
     </GridLayout>
 
