--- a/app/src/main/res/layout/activity_show_downloaded.xml
+++ b/app/src/main/res/layout/activity_show_downloaded.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout_show_downloaded"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.nqlab.simple.controller.ShowDownloadedActivity">
+    tools:context="net.nqlab.handheld.controller.ShowDownloadedActivity">
     <!-- The main content view -->
     <LinearLayout
         android:layout_width="match_parent"
