--- a/app/src/main/res/menu/menu_show_downloaded.xml
+++ b/app/src/main/res/menu/menu_show_downloaded.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="net.nqlab.simple.controller.LoginActivity">
+    tools:context="net.nqlab.handheld.controller.LoginActivity">
     <item android:id="@+id/action_go" android:title="@string/action_go"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
