--- a/handheld/src/main/res/layout/activity_list_local_go.xml
+++ b/handheld/src/main/res/layout/activity_list_local_go.xml
@@ -2,10 +2,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout_show_downloaded"
+    android:id="@+id/drawer_layout_list_downloaded"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.nqlab.btmw.handheld.controller.ShowDownloadedActivity">
+    tools:context="net.nqlab.btmw.handheld.controller.ListLocalGoActivity">
     <!-- The main content view -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
             app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:title="@string/title_activity_show_downloaded" />
+            app:title="@string/title_activity_list_local_go" />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -26,12 +26,12 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin">
-            <ExpandableListView
+            <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/expandableListView"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
+                android:id="@+id/listView"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
         </RelativeLayout>
     </LinearLayout>
     <!-- The navigation drawer -->
@@ -43,5 +43,4 @@
         app:menu="@menu/menu_navigation"/>
     <!-- app:headerLayout="@layout/navigation_header" -->
 </android.support.v4.widget.DrawerLayout>
-
 
