--- a/handheld/src/main/res/layout/activity_list_online.xml
+++ b/handheld/src/main/res/layout/activity_list_online.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout_list_online"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.nqlab.simple.controller.ListOnlineActivity">
+    tools:context="net.nqlab.btmw.handheld.controller.ListOnlineActivity">
     <!-- The main content view -->
     <LinearLayout
         android:layout_width="match_parent"
