--- a/handheld/src/main/res/layout/activity_login.xml
+++ b/handheld/src/main/res/layout/activity_login.xml
@@ -4,6 +4,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="net.nqlab.handheld.controller.LoginActivity">
+    tools:context="net.nqlab.btmw.handheld.controller.LoginActivity">
 
 </RelativeLayout>
