--- a/handheld/src/main/res/menu/menu_navigation.xml
+++ b/handheld/src/main/res/menu/menu_navigation.xml
@@ -11,6 +11,9 @@
         <item
             android:id="@+id/menu_list_downloaded"
             android:title="Downloaded List" />
+        <item
+            android:id="@+id/menu_list_local_go"
+            android:title="Go List (Local)" />
     </group>
     <item
         android:title="その他">
