--- a/handheld/src/main/res/layout/dialog_go_time_picker.xml
+++ b/handheld/src/main/res/layout/dialog_go_time_picker.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <DatePicker
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/datePicker"
+        android:datePickerMode="spinner"
+        tools:datePickerMode="spinner"
+        android:calendarViewShown="false" />
 
     <TimePicker
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/timePicker"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:timePickerMode="spinner" />
+
 </LinearLayout>
