--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="go_text_size">16sp</dimen>
     <dimen name="abc_text_size_headline_material">20sp</dimen>
     <dimen name="meterTextSize">32sp</dimen>
+    <dimen name="commentTextSize">24sp</dimen>
 </resources>
